# hevc-live

./: README.MD
client/: README.MD
client/cmpeg/: CMakeLists.txt  README.MD
client/cmpeg/cmpeg/: CMakeLists.txt  decoder_mpeg5.cpp  decoder_mpeg5.h  player.cpp  render_base.h
client/cmpeg/examples/: CMakeLists.txt  main.cpp  render_sdl.cpp  render_sdl.h
client/cmpeg/lib/: README.MD
client/cmpeg/lib/Debug/: cmpeg.lib
client/cmpeg/server/: README.MD
client/html5/: CatchDoll.html  README.MD  hevc.html
client/html5/RES/js/: jsmpeg.min.js
client/html5/RES/js/jsmpeg/: libde265.js  mpeg5.js  player.js  webgl.js
push/: README.md  camera.py
server/: README.MD  websocket-relay.js
