# Set Module Name
SET(MODULE_NAME sdl_player)

MESSAGE( STATUS "Configuring module: ${MODULE_NAME} ...")

# 包含目录
INCLUDE_DIRECTORIES( ${CMPEG_ROOT_PATH})
INCLUDE_DIRECTORIES( ${CMPEG_ROOT_PATH}/thirdparty/SDL-1.2.15/include)
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR})

# 链接库目录
LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
LINK_DIRECTORIES(${CMPEG_ROOT_PATH}/lib)
LINK_DIRECTORIES(${CMPEG_ROOT_PATH}/thirdparty/SDL-1.2.15/lib/x86)

# 包含文件
FILE( GLOB_RECURSE HEADER_FILES *.h *.inl)
FILE( GLOB_RECURSE SOURCE_FILES *.c *.cpp *.mm)

SET(ALL_FILES ${HEADER_FILES} ${SOURCE_FILES})

# 分组
GROUP_FILES(ALL_FILES ${CMAKE_CURRENT_SOURCE_DIR})

# 生成库
ADD_EXECUTABLE(${MODULE_NAME} ${ALL_FILES} CMakeLists.txt)

# 设置目录
SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES FOLDER "examples")

# Link libraries
TARGET_LINK_LIBRARIES(${MODULE_NAME} cmpeg SDL)

# ??????
MESSAGE(STATUS "Configure ${MODULE_NAME} success!")
